--- a/project_team/board_payment_spend.html
+++ b/project_team/board_payment_spend.html
@@ -239,6 +239,16 @@
             font-size: 18px;
             margin-bottom: 30px;
         }
+        .approval { /*결재선 추가삭제 버튼*/
+            padding: 7px 15px;
+            border-radius: 3px 3px 3px 3px;
+            background-color: #f9c80e;
+            font-size: 14px;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+            margin-bottom: 15px;
+        }
         .textwrap {
             width: 100%;
             height: 100%;
@@ -273,7 +283,7 @@
             font-weight: bold;
         }
         .tableLeft {
-            width: 500px;
+            width: 400px;
         }
         .tableLeft td {
             padding: 5px;
@@ -285,20 +295,17 @@
             text-align: center;
             background-color: pink;
         }
+        .tableRights td {
+            padding: 2px;
+        }
         .tableRightRequest {
             width: 130px;
-        }
-        .tableRightRequest td {
-            padding: 5px;
         }
         .tableRightResponse {
             width: 310px;
         }
-        .tableRightResponse td {
-            padding: 5px;
-        }
-        .bigtr  { /*신청자, 승인자 이름 부분의 tr태그 - 추후에 체크 아이콘이 추가될 예정 */
-            height: 62px;
+        .bigtr  { /*신청자, 승인자 이름 부분의 tr태그 - 여기에 체크 아이콘이 추가될 예정 */
+            height: 74px;
         }
         .bigtr i { /*신청, 승인시 나타나는 체크 아이콘*/
             font-size: 30px;
@@ -350,7 +357,7 @@
         .buttons { /*버튼들 - 글쓰기*/
             text-align: center;
             margin-top: 30px;
-            background-color: gold;
+            background-color: salmon;
         }
         .write {
             padding: 7px 15px;
@@ -365,7 +372,7 @@
         .cancle {
             padding: 7px 15px;
             border-radius: 3px 3px 3px 3px;
-            background-color: #858383;
+            background-color: #9e9e9e;
             color: white;
             font-size: 14px;
             font-weight: bold;
@@ -435,13 +442,14 @@
 
                 <section class="main-right"> <!--게시판 본문 시작-->
                     <h1><i class="far fa-file-alt"></i> 지출결의서</h1>
+                    <button class="approval"><i class="fas fa-user-check"></i> 결재선 정보</button> 클릭하면 모달창이나 sweet alert으로 직원 검색을 할 수 있게 할까?
                     <div class="textwrap">
                         <h3>법인카드 지출결의서</h3>
                         <form action="">
                             <div class="toptable">
                                 <table class="tableLeft">
                                     <tr>
-                                        <td class="gray">기안자</td><td>관리자</td>
+                                        <td class="gray">기안자</td><td>김뫄뫄</td>
                                     </tr>
                                     <tr>
                                         <td class="gray">소속</td><td>기획팀</td>
@@ -466,14 +474,20 @@
                                         </tr>
                                     </table>
                                     <table class="tableRightResponse">
+                                        <colgroup> <!--테이블 컬럼 너비 조절하는 태그-->
+                                            <col width="11%"/>
+                                            <col width="29%"/>
+                                            <col width="29%"/>
+                                            <col width="29%"/>
+                                        </colgroup>
                                         <tr>
-                                            <td rowspan="3" class="gray">승인</td><td>과장</td><td>차장</td><td>부장</td>
+                                            <td rowspan="3" class="gray">승인</td><td>과장</td><td>차장</td><td></td>
                                         </tr>
                                         <tr class="bigtr">
-                                            <td>강땡땡</td><td>박땡땡</td><td>이땡땡</td>
+                                            <td>강땡땡</td><td>박땡땡</td><td></td>
                                         </tr>
                                         <tr>
-                                            <td>2021/09/15</td><td>2021/09/15</td><td>2021/09/15</td>
+                                            <td>2021/09/15</td><td>2021/09/15</td><td></td>
                                         </tr>
                                     </table>
                                 </div>
@@ -487,7 +501,7 @@
                                         <td class="gray">작성일자</td><td><input type="date" name="" id=""></td><td class="gray">소속</td><td><input type="text" name="" id="">기획1팀</td>
                                     </tr>
                                     <tr>
-                                        <td class="gray">작성자</td><td><input type="text" name="" id=""></td><td class="gray">금액</td><td><input type="text" name="" id="">여기에 계산해서 뜸</td>
+                                        <td class="gray">작성자</td><td><input type="text" name="" id="">김뫄뫄 사원</td><td class="gray">금액</td><td><input type="text" name="" id="">여기에 계산해서 뜸</td>
                                     </tr>
                                     <tr>
                                         <td class="gray">지출사유</td><td colspan="3"><textarea name="" id=""></textarea></td>
@@ -524,7 +538,7 @@
                                 </table>
                             </div>
                             <div class="buttons"> <!--글쓰기 버튼들 시작-->
-                                <input type="button" class="write" value="결제요청">
+                                <input type="button" class="write" value="결재요청">
                                 <input type="button" class="cancle" value="취소">
                             </div> <!--글쓰기 버튼들 끝-->
                         </form>
